changed title and h1

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title>i don't know</title>
 </head>
 <body>
-
+  <h1>premiere phrase</h1>
 </body>
 </html>
